typescript/checker/tests/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017.ts:5:19
  |
5 |   var v = { [await]: foo }
  |                   ^

